# sec2md

./: .gitignore  CLAUDE.md  SCRIPT_USAGE.md  html2md.py  pyproject.toml  sections2md.py  show_sections.py
.github/workflows/: lint.yml
examples/: getting_started.ipynb
src/sec2md/: __init__.py  absolute_table_parser.py  chunking.py  core.py  models.py  parser.py  section_extractor.py  sections.py  table_parser.py  utils.py
src/sec2md/chunker/: blocks.py  chunk.py  chunker.py
tests/: __init__.py  test_section_extraction.py
tests/fixtures/: amazon_raw.html  intel_raw.html  intelq_raw.html  nvidia_raw.html
