[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sec2md"
version = "0.1.20"
description = "Convert SEC EDGAR filings to LLM-ready Markdown for AI agents and agentic RAG"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Lucas Astorian", email = "lucas@intellifin.ai"}
]
keywords = ["sec", "edgar", "markdown", "filings", "10-k", "10-q", "llm", "rag", "ai", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Text Processing :: Markup :: Markdown",
]

dependencies = [
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "requests>=2.31.0",
    "tiktoken>=0.5.0",  # Default: exact token counting (use --no-deps to exclude)
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/lucasastorian/sec2md"
Repository = "https://github.com/lucasastorian/sec2md"
Issues = "https://github.com/lucasastorian/sec2md/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39"]
extend-exclude = '''
\.ipynb$
'''

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["*.ipynb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.uv]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "ruff>=0.14.11",
]
# Documentation: Run linting with `uv run ruff check .`
# Fix linting issues with `uv run ruff check --fix .`
# Format code with `uv run black .`
# Or combine: `uv run ruff check --fix . && uv run black .`
